tests/negative/gold/class_assign_test.gold
tests/negative/class_assign_test.toit:8:3: error: Can't assign to class 'A'
  A = 3
  ^
Compilation failed.
